WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217000
Crunchyroll playback controls do not work on iPad with trackpad
https://bugs.webkit.org/show_bug.cgi?id=217000
Summary
Crunchyroll playback controls do not work on iPad with trackpad
Tim Horton
Reported
2020-09-25 16:29:01 PDT
Crunchyroll playback controls do not work on iPad with trackpad
Attachments
Patch
(3.67 KB, patch)
2020-09-25 16:29 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-09-25 16:29:38 PDT
Created
attachment 409759
[details]
Patch
Tim Horton
Comment 2
2020-09-25 16:29:42 PDT
<
rdar://problem/66362029
>
Wenson Hsieh
Comment 3
2020-09-25 16:30:11 PDT
Comment on
attachment 409759
[details]
Patch rs=me
EWS
Comment 4
2020-09-25 17:27:14 PDT
Committed
r267612
: <
https://trac.webkit.org/changeset/267612
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409759
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug